--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # --- Required options --- #
 
 # Name of website
-title: 홍길동's AI Portfolio
+title: 이민석's AI Portfolio
 
 # Your name to show in the footer
-author: 홍길동
+author: 이민석
 
 # --- List of links in the navigation bar --- #
 
@@ -37,9 +37,9 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "help@aischool.ai"
+  email: "min960827@gmail.com"
 #  facebook: deanattali
-  github: inflearnaiportfolio
+  github: ms827
 #  twitter: daattali
 #  patreon: DeanAttali
 #  youtube: c/daattali
@@ -76,7 +76,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "inflearnaiportfolio.github.io"
+url-pretty: "ms827.github.io"
 
 # Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
